--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+   <head>
+       <title> Insert Meme Here </title>
+    </head>
     <body>
        Hello there, awesome person! That would be me, yes.
     </body>
