--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
        <h1> Welcome! </h1>
        Hello there, awesome person! That would be me, yes.
+       <img src="https://avatars3.githubusercontent.com/u/49203781?v=4">
     </body>
 </html>
