--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
        <h1> Welcome! </h1>
        Hello there, awesome person! That would be me, yes.
        <img src="https://avatars3.githubusercontent.com/u/49203781?v=4">
+       <h3> Fave internet sites </h3>
+       <ol>
+          <li> facebook.com </li>
+          <li> youtube.com </li>
+          <li> twitch.com </li>
+          <li> github.com </li>
+       </ol>
     </body>
 </html>
