--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
        <img src="https://avatars3.githubusercontent.com/u/49203781?v=4">
        <h3> Fave internet sites </h3>
        <ol>
-          <li> facebook.com </li>
-          <li> youtube.com </li>
-          <li> twitch.com </li>
-          <li> github.com </li>
+          <li> <a href="https://www.facebook.com"> </a> </li>
+          <li> <a href="https://www.youtube.com"> </a> </li>
+          <li> <a href="https://www.twitch.com"> </a> </li>
+          <li> <a href="https://www.github.com"> </a> </li>
        </ol>
     </body>
 </html>
